--- a/community/pages/home.html
+++ b/community/pages/home.html
@@ -1,149 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <title>Album example · Bootstrap v5.0</title>
-        <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    </head>
-    <body>
-        <header>
-            <div class="collapse bg-dark" id="navbarHeader">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-8 col-md-7 py-4">
-                            <h4 class="text-white">About</h4>
-                            <p class="text-muted">Add some information about the album below, the author, or any other
-                            background context. Make it a few sentences long so folks can pick up some informative
-                            tidbits. Then, link them off to some social networking sites or contact information.</p>
-                        </div>
-                        <div class="col-sm-4 offset-md-1 py-4">
-                            <h4 class="text-white">Contact</h4>
-                            <ul class="list-unstyled">
-                                <li>
-                                    <a href="#" class="text-white">Follow on Twitter</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="text-white">Like on Facebook</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="text-white">Email me</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <title>Album example · Bootstrap v5.0</title>
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+<header>
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="container"><a href="#" class="navbar-brand d-flex align-items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                 stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
+                 viewBox="0 0 24 24">
+                <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z">
+                </path>
+                <circle cx="12" cy="13" r="4"></circle>
+            </svg>
+            <strong>和大家分享</strong> </a>
+            <label class="btn btn-primary" for="checkboxButton47">设置我的账户</label>
+        </div>
+    </div>
+</header>
+<main>
+    <section class="py-5 text-center container">
+        <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 class="fw-light">用户昵称</h1>
+                <p class="lead text-muted">签名</p>
             </div>
-            <div class="navbar navbar-dark bg-dark shadow-sm">
-                <div class="container"><a href="#" class="navbar-brand d-flex align-items-center"> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24">
-                            <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z">
-</path>
-                            <circle cx="12" cy="13" r="4"></circle>
-                        </svg> <strong>和大家分享</strong> </a>
-                    <label class="btn btn-primary" for="checkboxButton47">设置我的账户</label>
-                </div>
+            <div class="form-check mb-3">
+                <input type="checkbox" class="btn-check" id="checkboxButton47" autocomplete="off">
             </div>
-        </header>
-        <main>
-            <section class="py-5 text-center container">
-                <div class="row py-lg-5">
-                    <div class="col-lg-6 col-md-8 mx-auto">
-                        <h1 class="fw-light">用户昵称</h1>
-                        <p class="lead text-muted">签名</p>
+            <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
+                <ol class="carousel-indicators">
+                </ol>
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                        </div>
                     </div>
-                    <div class="form-check mb-3"> 
-                        <input type="checkbox" class="btn-check" id="checkboxButton47" autocomplete="off">                          
+
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="https://pinegrow.com/placeholders/img17.jpg" class="d-block w-100">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
                     </div>
-                    <div id="carousel1" class="carousel slide" data-bs-ride="carousel"> 
-                        <ol class="carousel-indicators">                                                                                        
-</ol>                         
 
-                        <div class="carousel-inner"> 
-                            <div class="carousel-item active" data-bs-interval="10000">                                  
-
-                                <div class="carousel-caption d-none d-md-block"> 
-                                    <h5>First slide label</h5> 
-                                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> 
-                                </div>                                 
-                            </div>                             
-
-                            <div class="carousel-item" data-bs-interval="2000"> 
-                                <img src="https://pinegrow.com/placeholders/img17.jpg" class="d-block w-100"> 
-                                <div class="carousel-caption d-none d-md-block"> 
-                                    <h5>Second slide label</h5> 
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
-                                </div>                                 
-                            </div>                             
-
-                            <div class="carousel-item"> 
-                                <img src="https://pinegrow.com/placeholders/img11.jpg" class="d-block w-100"> 
-                                <div class="carousel-caption d-none d-md-block"> 
-                                    <h5>Third slide label</h5> 
-                                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p> 
-                                </div>                                 
-                            </div>                             
-                        </div>                         <a class="carousel-control-prev" href="#carousel1" role="button" data-bs-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="visually-hidden">Previous</span> </a> <a class="carousel-control-next" href="#carousel1" role="button" data-bs-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="visually-hidden">Next</span> </a> 
+                    <div class="carousel-item">
+                        <img src="https://pinegrow.com/placeholders/img11.jpg" class="d-block w-100">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        </div>
                     </div>
                 </div>
-            </section>
-            <div class="album py-5 bg-light">
-                <div class="container">
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                        <div class="col">
-                            <div class="card shadow-sm">
-                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                                    <title>Placeholder</title>
-                                    <rect width="100%" height="100%" fill="#55595c"></rect>
-                                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">标题</text>
-                                </svg>
-                                <div class="card-body">
-                                    <p class="card-text">标题</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">点赞</button>
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">评论</button>
-                                        </div><small class="text-muted">9 mins</small>
-                                    </div>
+                <a class="carousel-control-prev" href="#carousel1" role="button" data-bs-slide="prev"> <span
+                        class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="visually-hidden">Previous</span>
+                </a> <a class="carousel-control-next" href="#carousel1" role="button" data-bs-slide="next"> <span
+                    class="carousel-control-next-icon" aria-hidden="true"></span> <span
+                    class="visually-hidden">Next</span> </a>
+            </div>
+        </div>
+    </section>
+    <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
+                             preserveAspectRatio="xMidYMid slice" focusable="false">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#55595c"></rect>
+                            <text x="50%" y="50%" fill="#eceeef" dy=".3em">标题</text>
+                        </svg>
+                        <div class="card-body">
+                            <p class="card-text">标题</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">点赞</button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">评论</button>
                                 </div>
+                                <small class="text-muted">9 mins</small>
                             </div>
                         </div>
-                        <div class="col">
-                            <div class="card shadow-sm">
-                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                                    <title>Placeholder</title>
-                                    <rect width="100%" height="100%" fill="#55595c"></rect>
-                                </svg>
-                                <div class="card-body">
-                                    <p class="card-text">标题</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">点赞</button>
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">评论</button>
-                                        </div><small class="text-muted">9 mins</small>
-                                    </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
+                             preserveAspectRatio="xMidYMid slice" focusable="false">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#55595c"></rect>
+                        </svg>
+                        <div class="card-body">
+                            <p class="card-text">标题</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">点赞</button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">评论</button>
                                 </div>
+                                <small class="text-muted">9 mins</small>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </main>
-        <footer class="text-muted py-5">
-            <div class="container">
-                <p class="float-end mb-1">  </p>
-            </div>
-        </footer>
-        <footer class="text-muted py-5">
-            <div class="container">
-                <p class="float-end mb-1"> <a href="#">Back to top</a> </p>
-                <p class="mb-1">Album example is © Bootstrap, but please download and customize it for yourself!</p>
-                <p class="mb-0">New to Bootstrap? <a href="#">Visit the homepage</a> or read our <a href="#">getting started guide</a>.</p>
-            </div>
-        </footer>
-        <script src="assets/js/popper.min.js"></script>
-        <script src="assets/js/popper.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-    </body>
+        </div>
+    </div>
+</main>
+<footer class="text-muted py-5">
+    <div class="container">
+        <p class="float-end mb-1"></p>
+    </div>
+</footer>
+<footer class="text-muted py-5">
+    <div class="container">
+        <p class="float-end mb-1"><a href="#">Back to top</a></p>
+        <p class="mb-1">Album example is © Bootstrap, but please download and customize it for yourself!</p>
+        <p class="mb-0">New to Bootstrap? <a href="#">Visit the homepage</a> or read our <a href="#">getting started
+            guide</a>.</p>
+    </div>
+</footer>
+<script src="assets/js/popper.min.js"></script>
+<script src="assets/js/popper.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+</body>
 </html>
