--- a/community/pages/sign-in.html
+++ b/community/pages/sign-in.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="">
 		<script src="js/login.js"></script>
+		<script src="js/common.js"></script>
 		<script>
 			function foo() {
 				username = document.getElementById('inputAccount').value;
