--- a/community/pages/sign-up.html
+++ b/community/pages/sign-up.html
@@ -7,12 +7,13 @@
     <script src="js/login.js">
 
     </script>
+    <script src="js/common"></script>
     <script>
         function foo1() {
             username = document.getElementById('inputAccount').value;
             pwd = document.getElementById('inputPassword').value;
             email = document.getElementById('inputEmail').value;
-            register(username,pwd,email);
+            register(username, pwd, email);
         }
     </script>
     <title>为自己注册一个账号</title>
